# jadx-mcp-server

./: README.md  SECURITY.md  jadx_mcp.py  jadx_mcp_server.py  pyproject.toml  requirements.txt  test.sh  zin-local-llm.py  zin_mcp_client.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_template.md  question_template.md
src/: PaginationUtils.py  banner.py
src/server/: __init__.py  config.py
src/server/tools/: class_tools.py  debug_tools.py  refactor_tools.py  resource_tools.py  search_tools.py  xrefs_tools.py
templates/: index.html
