[project]
name = "jadx-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0.2",
    "httpx>=0.28.1",
    "requests>=2.32.3",
]

[tool.setuptools]
py-modules = ["jadx_mcp_server"]

[project.scripts]
jadx_mcp_server = "jadx_mcp_server:main"
